--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,9 @@ font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
+margin: auto;
 margin-bottom: 48px;
+max-width: 496px;
 }
 
 .about-our-work-title{
@@ -84,7 +86,7 @@ color: var(--navy-blue);
 .contact-info{
   font-style: normal;
 }
-.contact-info ul{
+.contact-info_list{
     display: flex;
   flex-direction: row;
   gap: 40px;
@@ -98,7 +100,7 @@ color: var(--slate);
 }
 .title{
   background-color: var(--navy-blue);
-  padding: 188px 472px;
+  padding: 188px 0;
 }
 .title-button{
   background-color: var(--iris);
@@ -113,7 +115,7 @@ color: var(--slate);
   border-radius: 4px;
   margin: 0 auto;
 /* padding: 16px 32px; */
-width: 169px;
+min-width: 169px;
 height: 56px;
 border: none;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -146,10 +148,6 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--slate);
 }
-.team-member h3{
-  padding-top: 32px;
-  padding-bottom: 8px;
-}
 .our-team-section{
   background-color: var(--cloud);
 }
@@ -160,7 +158,7 @@ color: var(--slate);
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--navy-blue);
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 .team-member{
   background-color: var(--white); 
@@ -175,7 +173,6 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: var(--slate);
-padding-bottom: 32px;
 }
 .about-our-portfolio-title{
   font-size: 36px;
@@ -217,7 +214,7 @@ max-width: 264px;
   color: var(--cloud);
 }
 
-.nav-list>ul{
+.nav-link_list{
   display: flex;
 align-items: flex-start;
 justify-content: flex-start;
@@ -226,13 +223,14 @@ gap: 40px;
 }
 .nav-list{
   display: flex;
+  align-items: center
 }
 .container { 
 max-width: 1158px;
 padding: 0 15px;
 margin: 0 auto;
 }
-header{
+.header{
   border-bottom: 1px solid var(--cornflower);
  
 }
@@ -253,10 +251,10 @@ header{
 .our-work-box_style{
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 24px;
   justify-content: space-between;
 }
-.our-work-box_style li{
+.our-work-box_style_list{
   width: calc((100% - 72px) / 4);
 }
 .visually-hidden {
@@ -270,6 +268,7 @@ header{
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
+ margin-bottom: 8px;
 }
 .padding-for-section{
   padding-top: 120px; 
