--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--cloud);
-display: inline-block;
+display: block;
 max-width: 264px;
 }
 .logo-span-footer{
@@ -269,7 +269,6 @@ margin: 0 auto;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
- margin-bottom: 8px;
 }
 .padding-for-section{
   padding-top: 120px; 
@@ -280,11 +279,15 @@ margin: 0 auto;
   flex-direction: row;
   flex-wrap: wrap;
   row-gap: 48px;
+  column-gap: 24px;
   justify-content: space-between;
 }
 .about-our-portfolio_list_elements{
   width: calc((100% - 48px) / 3);
   
+}
+.image-box{
+  width: calc((100% - 48px) / 3);
 }
 .second-portfolio-box{
   padding: 32px 16px;
@@ -306,7 +309,7 @@ footer a{
 .footer-logo{
   display: inline-block
 }
-footer .container{
+/* footer .container{
   display: flex;
   flex-direction: column;
-}
+} */
